--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>one.util</groupId>
+            <artifactId>streamex</artifactId>
+            <version>0.8.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
